[gd_scene load_steps=6 format=3 uid="uid://cedk2s7on1gg5"]

[ext_resource type="Texture2D" uid="uid://gp2mtifsphtl" path="res://Game Components/UI_Elements/inv_components/inv_background.png" id="1_gh22h"]
[ext_resource type="Script" path="res://Game Components/UI_Elements/quest log components/quest_card.gd" id="1_hfsoy"]
[ext_resource type="FontFile" uid="uid://du58gfnyy5wpj" path="res://Game Components/fonts/Silver.ttf" id="3_rljj1"]
[ext_resource type="LabelSettings" uid="uid://rpr4y5q5ktko" path="res://char_info.tres" id="4_4ig8f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gyxv6"]

[node name="quest_card" type="Panel"]
light_mask = 0
offset_right = 248.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_gyxv6")
script = ExtResource("1_hfsoy")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(7.62939e-06, 1.90735e-06)
scale = Vector2(7.75, 2)
texture = ExtResource("1_gh22h")
centered = false

[node name="quest_name" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 192.0
offset_bottom = 46.0
label_settings = ExtResource("4_4ig8f")

[node name="quest_status" type="Label" parent="."]
layout_mode = 0
offset_left = 172.0
offset_top = 4.0
offset_right = 244.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("3_rljj1")
theme_override_font_sizes/font_size = 19
label_settings = ExtResource("4_4ig8f")
horizontal_alignment = 2

[node name="quest_desc" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 32.0
offset_right = 244.0
offset_bottom = 74.0
theme_override_constants/line_spacing = 10000
label_settings = ExtResource("4_4ig8f")
autowrap_mode = 3
